[project]
name = "incident-response-env"
version = "0.1.0"
description = "Production Incident Response environment for OpenEnv — agentic RL training."
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=4.0.0", "httpx>=0.24.0"]

[project.scripts]
# Enables: uv run server  (or: uv run server --port 8001)
server = "incident_response_env.server.app:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib --rootdir=tests"

[tool.setuptools]
include-package-data = true
packages = ["incident_response_env", "incident_response_env.server"]
package-dir = { "incident_response_env" = ".", "incident_response_env.server" = "server" }
